# HexGame

./: CMakeLists.txt  Makefile  README.md
doc/: Doxyfile
lib/cyounit-src/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
lib/cyounit-src/docker/: cmake.dockerfile  doxygen.dockerfile
lib/cyounit-src/include/: cyounit.h
lib/cyounit-src/src/: CMakeLists.txt  cyounit.c  cyounit_private.h
lib/cyounit-src/test/: CMakeLists.txt  test-main.c  test-main.h  test-success.c
lib/set-src/include/: set.h
lib/set-src/src/: set_dynamic.c  set_dynamic.h  set_dynamic_struc.h
lib/set/include/: set.h
report/: report.aux  report.out  report.tex  report.toc
src/: CMakeLists.txt  WTree.c  WTree.h  connex_player.c  graph.c  graph.h  graph_manager.h  methods.c  methods.h  minimax_player.c  move.h  player.h  player_loader.c  player_loader.h  random_player.c  server.c
test/: CMakeLists.txt  main.c  test_WTree.c  test_WTree.h  test_connex_player.c  test_connex_player.h  test_graph_generator.c  test_graph_generator.h  test_methods.c  test_methods.h  test_player_loader.c  test_player_loader.h  test_random_player.c  test_random_player.h  test_server.c  test_server.h  test_set.c  test_set.h
